# wm-play-common

./: .gitignore  README.md  __init__.py  api.py  local_ui.py  pyproject.toml
docs/: adapter-guide.md  architecture.md
src/wm_play/: __init__.py  __main__.py  api.py  cli.py  headless.py  recording.py  server_summary.py  session.py  standalone.py  status.py  web_server.py
src/wm_play/web/: app.js  index.html  styles.css
tests/: test_simple_ale_ram.py
wm_play/: __init__.py  cli.py  client.py  protocol.py  remote.py
