[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wm-play-common"
version = "0.1.0"
description = "Shared interactive play abstractions for action-conditioned world models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pygame", "Pillow", "numpy", "flask", "flask-socketio"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wm_play = ["web/*", "web/vendor/*"]
