[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wm-play-common"
version = "0.2.0"
description = "Shared interactive play abstractions for action-conditioned world models."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pygame", "Pillow", "numpy", "flask", "flask-socketio", "imageio", "imageio-ffmpeg"]

[project.optional-dependencies]
gym = ["gymnasium"]
dev = ["gymnasium", "pytest>=8"]

[project.scripts]
wm-play = "wm_play.standalone:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wm_play = ["web/*", "web/vendor/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
